# GOOD-diagrams

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  index.html  matlab_reference.m  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
good_diagrams/: __init__.py  example.py  figure.py
javascript/: example.json  good_diagram.js  good_diagrams.html  setup.js  style.css  utils.js
notebooks/: .gitignore
tests/: __init__.py  test_good_diagrams.py
